fixed overflow of some of the larger(height) gifs, removed buttons for initial load, scroll to top when next/previous 10 button pressed

--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@
   padding: 1.5rem;
   border-radius: 10px;
   width: 30%;
-  max-height: 60vh;
+  max-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
